--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site turma 2c</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect"href="https://fonts.googleapis.com">
+    <link rel="preconnect"href="https://fonts.gstatic.com"crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"rel="stylesheet">
 </head>
 <body>
-  <h1>vai ser uma imagem aqui</h1>  
+  <header class="cabecalho">
+     <img class="cabecalho-imagem src=alurastart logo.png" alt="logo da alura start">
+     <ul class="cabecalho-imagemlista">
+         <li class="cabecalho-lista-item">escola</li>
+         <li class="cabecalho-lista-item">estudantes
+         </ul>      
+</header>
+
+<section class="escola">
+   <div class="escola-div-conteúde">
+      <h2 class="escola-título">Sobre a Escola</h2>
+      <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento
+         Computacional através da Programação. </p>
+      <p class="escola-texto-dois">A turma mais famosa é a Segunda Série C. Uma turma diversa e engajamento, as 
+          vezes, um pouco bagunceira, mas que entrega exelentes resultatos!</p>
+  </div>
+  <img class="escola-imagem" src="Teaching-amico.png" alt="professora ensinado na sala de aula">   
+</section>
+
 </body>
-</html>
+<html></html>
