--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
   <img class="escola-imagem" src="Teaching-amico.png" alt="professora ensinado na sala de aula">   
 </section>
 
+
+
+
 </body>
-<html></html>
+</html>
